# gnugo

./: .gitignore  ChangeLog  Makefile.am  autogen.sh  configure.ac
.github/workflows/: ci.yml
doc/: install.texi  reading.texi
engine/: Makefile.am  aftermath.c  board.c  board.h  boardlib.c  breakin.c  cache.c  cache.h  clock.c  clock.h  combination.c  dragon.c  endgame.c  filllib.c  fuseki.c  genmove.c  globals.c  gnugo.h  handicap.c  hash.c  hash.h  influence.c  influence.h  interface.c  liberty.h  matchpat.c  montecarlo.c  move_reasons.c  move_reasons.h  movelist.c  optics.c  oracle.c  owl.c  persistent.c  printutils.c  readconnect.c  readconnect.h  reading.c  semeai.c  sgfdecide.c  (+8 more)
interface/: Makefile.am  gnugo-big-xpms.el  gnugo-xpms.el  gnugo.el  interface.h  main.c  make-xpms-file.el  play_ascii.c  play_gmp.c  play_gtp.c  play_solo.c  play_test.c
interface/GoImage/: Stone.pm
interface/gtp_examples/: 2ptkgo.pl  gnugo.el  matcher_check  metamachine.c  sgf2tst  ttgo.pm  twogtp  twogtp-a  twogtp.pike  twogtp.py  vanilla.c
patterns/: Makefile.am  README  aa_attackpats.db  attack.db  barriers.db  compress_fuseki.c  conn.db  connections.c  defense.db  dfa-mkpat.h  dfa.c  dfa.h  endgame.db  extract_fuseki.c  eyes.db  eyes.h  fuseki.db  gnugo-db.el  gogo.sgf  handicap.db  helpers.c  hoshi_keima.sgf  hoshi_other.sgf  influence.db  joseki.c  komoku.sgf  mc_mogo_classic.db  mc_montegnu_classic.db  mc_uniform.db  mkeyes.c  mkmcpat.c  mkpat.c  mokuhazushi.sgf  oracle.db  owl_attackpats.db  owl_defendpats.db  owl_vital_apats.db  patterns.db  patterns.h  patterns2.db  (+4 more)
regression/: breakage2tst.py  regress.pl  regress.plx  view.pike
sgf/: Makefile.am  sgf_utils.c  sgfgen.c  sgfnode.c  sgftree.c  sgftree.h
utils/: Makefile.am  getopt.c  getopt1.c  gg-getopt.h  gg_utils.c  gg_utils.h  random.c  random.h  winsocket.c  winsocket.h
